Fix response out changes from OCI Genai
Squashed commit of the following:

commit bb4a063e26a29ff71b7e47c93ab7354713f7079d
Author: phuong <dinh.phuong.hoang@oracle.com>
Date:   Fri Feb 2 17:06:51 2024 -0500

    Fix response out changes from OCI Genai